# fimiir

./: .gitignore  Cargo.toml
src/: main.rs  nes.rs  nes_bevy_plugin.rs
src/nes/: bus.rs  cpu.rs  mappers.rs  opcodes.rs  ppu.rs
src/nes/mappers/: inesmapper003.rs  nrom.rs
