[package]
name = "fimiir"
description = "FIMIIR (Fine I'll Make It In Rust) is a collection of emulators written in Rust."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bevy = "0.14.0"
bevy_dylib = "0.14.0"
bitflags = "2.6.0"
bytemuck = "1.16.1"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
pixels = "0.13.0"
winit = { version = "0.30.4", features = ["rwh_05"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
fast-compilation = ["bevy/dynamic_linking"]
