[package]
name = "fimiir"
description = "FIMIIR (Fine I'll Make It In Rust) is a collection of emulators written in Rust."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy_dylib = "0.14.0"
bitflags = "2.6.0"
crossbeam-channel = "0.5.13"
image = "0.25"
lazy_static = "1.5.0"
leafwing-input-manager = "0.14.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
fast-compilation = ["bevy/dynamic_linking"]
